--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "new",
+  "name": "ponnyLive",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.18.0",
+    "history": "^4.7.2",
     "moment": "2.22.1",
     "react": "16.3.2",
+    "react-bootstrap": "^0.32.1",
+    "react-bootstrap-time-picker": "^1.0.3",
     "react-datepicker": "1.4.1",
     "react-dom": "16.3.2",
+    "react-facebook-login": "^4.0.1",
+    "react-modal": "^3.4.2",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
     "react-slick": "0.23.1",
-    "slick-carousel": "1.8.1"
+    "react-social-sharebuttons": "^2.1.4",
+    "slick-carousel": "1.8.1",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {},
   "scripts": {
