--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "flow": "^0.2.3",
+    "flow-typed": "^2.4.0",
     "history": "^4.7.2",
+    "isomorphic-fetch": "^2.2.1",
     "moment": "2.22.1",
     "react": "16.3.2",
     "react-bootstrap": "^0.32.1",
@@ -15,14 +18,18 @@
     "react-dom": "16.3.2",
     "react-facebook-login": "^4.0.1",
     "react-modal": "^3.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
     "react-slick": "0.23.1",
     "react-social-sharebuttons": "^2.1.4",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.3.0",
+    "redux-thunk": "^2.2.0",
     "slick-carousel": "1.8.1",
-    "styled-components": "^3.2.6"
+    "styled-components": "^3.2.6",
+    "whatwg-fetch": "^2.0.4"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
